feat: improve escape hatches (#326)
- improves the escape hatches to support skipping response processing by
returning the `SkipResponse` symbol, allowing the method handler
implementations to directly send responses. This allows for scenarios
like returning binary data that isn't currently supported by the code
generation
- refactors the e2e tests in anticipation of multiple server
implementations, and adds a few tests
- adds documentation around the included escape hatches
